www/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: www
  namespace: mauriciovelez
  labels:
    app: www
spec:
  selector:
    app: www
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
